--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "check": "flow check"
+    "test": "flow check"
   },
   "devDependencies": {
     "flow-bin": "^0.93.0"
